<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@null"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/shap"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/choose_sex"
                android:textColor="#404040"
                android:textSize="18dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/male"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/male"
                android:textColor="#5C78CE"
                android:background="?android:selectableItemBackground"
                android:textSize="14dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/fuwen" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/fuwen" />

            <TextView
                android:id="@+id/female"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/female"
                android:textColor="#5C78CE"
                android:background="?android:selectableItemBackground"
                android:textSize="14dp" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/cancle_sex"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shap"
        android:textColor="@color/red"
        android:textSize="16dp"
        android:text="@string/cancle"/>

</LinearLayout>