<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.qg.kinectpatient.view.ToolbarT
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_size"
        android:background="@color/base_color"
        app:title="@string/base_info"
        app:titleTextColor="@android:color/white">

        <TextView
            android:id="@+id/right"
            style="@style/ToolbarRightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </com.qg.kinectpatient.view.ToolbarT>

    <FrameLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_marginTopPercent="1.25%"
        android:layout_below="@id/toolbar"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="23.5dp"
            android:layout_marginStart="23.5dp"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            tools:text="@string/name"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            android:background="@color/color_grey2"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/name"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="23.5dp"
            android:layout_marginStart="23.5dp"
            android:text="@string/age"/>

        <TextView
            android:id="@+id/age_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            tools:text="@string/age"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            android:background="@color/color_grey2"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/to"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/sex"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/age"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="23.5dp"
            android:layout_marginStart="23.5dp"
            android:text="@string/sex"/>

        <TextView
            android:id="@+id/sex_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            tools:text="@string/sex"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            android:background="@color/color_grey2"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/to"/>

    </FrameLayout>

</android.support.percent.PercentRelativeLayout>
