<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.qg.kinectpatient.view.TopbarZ
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="33.5dp"
                        android:layout_height="45dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/records_detail" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/image"
                        android:layout_marginLeft="20dp"
                        android:layout_centerVertical="true">

                        <TextView
                            android:id="@+id/hospital"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            android:layout_centerHorizontal="true"
                            android:text="章三順"
                            android:textColor="@color/home_record"
                            android:textSize="16dp" />

                        <TextView
                            android:id="@+id/keshi_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/hospital"
                            android:layout_marginTop="8dp"
                            android:layout_centerHorizontal="true"
                            android:text="32，男"
                            android:textColor="@color/home_record"
                            android:textSize="12dp" />
                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/had_records"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="22dp"
                        android:text="@string/see_time"
                        android:textColor="#404040"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="100dp"
                        android:layout_marginRight="14dp"
                        android:layout_marginTop="10dp"
                        android:text="2016"
                        android:textColor="#B1B1B1"
                        android:textSize="14dp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="22dp"
                    android:background="#E0E0E0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="17.5dp"
                    android:text="@string/medical_condition"
                    android:textColor="#404040"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/medical_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="17.5dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="17.5dp"
                    android:text="fasd"
                    android:textColor="#B1B1B1"
                    android:textSize="14dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="22dp"
                    android:background="#E0E0E0" />
            </LinearLayout>

            <Button
                android:id="@+id/rc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/add_records"
                android:text="@string/rc_plan"
                android:textColor="@color/white"
                android:textSize="14dp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>